--- a/app.json
+++ b/app.json
@@ -1,6 +1,10 @@
 {
   "expo": {
-    "platforms": ["ios", "android", "web"],
+    "platforms": [
+      "ios",
+      "android",
+      "web"
+    ],
     "name": "frontend",
     "slug": "frontend",
     "version": "1.0.0",
@@ -24,6 +28,12 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      "expo-router",
+      {
+        "root": "./frontend"
+      }
+    ]
   }
 }
