--- a/app.json
+++ b/app.json
@@ -1,10 +1,6 @@
 {
   "expo": {
-    "platforms": [
-      "ios",
-      "android",
-      "web"
-    ],
+    "platforms": ["ios", "android", "web"],
     "name": "frontend",
     "slug": "frontend",
     "version": "1.0.0",
@@ -30,10 +26,12 @@
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
-      "expo-router",
-      {
-        "root": "./frontend"
-      }
+      [
+        "expo-router",
+        {
+          "root": "./src/routes"
+        }
+      ]
     ]
   }
 }
