--- a/package.json
+++ b/package.json
@@ -19,22 +19,22 @@
     "@expo/webpack-config": "^19.0.1",
     "@prisma/client": "^5.22.0",
     "@react-native-picker/picker": "^2.11.0",
-    "@react-navigation/native": "^7.0.15",
-    "@react-navigation/native-stack": "^7.2.1",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
     "axios": "^1.7.7",
-    "expo": "~52.0.11",
-    "expo-constants": "~17.0.3",
-    "expo-linking": "~7.0.3",
-    "expo-router": "~4.0.9",
-    "expo-status-bar": "~2.0.0",
+    "expo": "^53.0.7",
+    "expo-constants": "~17.1.5",
+    "expo-linking": "~7.1.4",
+    "expo-router": "~5.0.5",
+    "expo-status-bar": "~2.2.3",
     "express": "^4.21.1",
-    "react": "18.3.1",
-    "react-dom": "^18.3.1",
-    "react-native": "0.76.3",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.2",
     "react-native-calendars": "^1.1310.0",
-    "react-native-safe-area-context": "^4.12.0",
-    "react-native-screens": "~4.1.0",
-    "react-native-web": "^0.19.13",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
+    "react-native-web": "^0.20.0",
     "react-router-dom": "^7.0.1",
     "tsx": "^4.19.2"
   },
@@ -42,9 +42,9 @@
     "@babel/core": "^7.25.2",
     "@types/express": "^5.0.0",
     "@types/node": "^22.9.3",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.0.10",
     "prisma": "^5.22.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.2"
+    "typescript": "~5.8.3"
   }
 }
